# qwen-experiments

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: native-customvoice.env.example
docs/: NATIVE_CUSTOMVOICE_FIRST_RUN.md  NATIVE_CUSTOMVOICE_PROMPT_PACK.md  QWEN_PROVIDER_API_CONTRACT_2026-03-18.md  QWEN_STREAM_FIRST_SPIKE_PLAN_2026-03-18.md
scripts/: run_native_customvoice.sh  run_native_customvoice_pack.sh
src/qwen_experiments/: __init__.py  cli.py  config.py  event_log.py  native_customvoice.py  native_customvoice_pack.py  native_voice_design.py  prompt_pack.py  provider_models.py  provider_server.py
tests/: __init__.py
